--- a/Web/index.html
+++ b/Web/index.html
@@ -2,8 +2,7 @@
 <head>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-<script type="text/javascript" src="script/codePostalComplete.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <form>
